flowc/tests/fixtures/lex_e104_bad_escape.expected.err
tests/fixtures/lex_e104_bad_escape.flow:2:21: error[E104]: invalid escape '\q' in string literal
