flowc/tests/fixtures/lex_e104_bad_escape.flow
tool assess_risk(id: string) -> bool
  effect model("risk\q1")
